# upwork-crawler

./: .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yml  env.example  local.env  main.py  pyproject.toml  pytest.init
src/: main.py
src/crawlers/: __init__.py  constants.py  homepage.py  login.py  profile.py
upwork_crawler/: main.py
upwork_crawler/crawlers/: __init__.py  constants.py  exceptions.py  models.py
upwork_crawler/crawlers/homepage/: __init__.py  crawler.py  models.py
upwork_crawler/crawlers/login/: __init__.py  crawler.py
upwork_crawler/crawlers/profile/: __init__.py  crawler.py  models.py
upwork_crawler/tests/: conftest.py
upwork_crawler/tests/homepage/: conftest.py  test_models.py
upwork_crawler/tests/profile/: conftest.py  response_fixture.json  test_models.py
