[tool.poetry]
name = "upwork-crawler"
version = "0.1.0"
description = "Upwork crawler"
authors = ["Giovani Moutinho <giovanim@ymail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
