[tool.poetry]
name = "upwork-crawler"
version = "0.1.0"
description = "Upwork crawler"
authors = ["Giovani Moutinho <giovanim@ymail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^3.141.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"
docker-compose = "^1.28.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
